# e-garota

./: .clang-format  .gitignore  CMakeLists.txt
include/: PluginEditor.h  PluginProcessor.h
src/: PluginEditor.cpp  PluginProcessor.cpp
